# pinoq

./: Cargo.toml  HACKING.md  README.md  config.toml  pinoq.service
.github/workflows/: tests.yaml
src/: main.rs
src/pinoq/: config.rs  encryption.rs  error.rs  file_format.rs  file_system.rs  filefmt.rs  fs.rs  mod.rs
tests/: integration.py
