[package]
name = "pinoq"
version = "0.1.0"
authors = ["amiremohamadi"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.5"
log = "0.4"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
fuser = "0.15"
memmap = "0.7"
bincode = "1.3"
bitvec = "1.0"
libc = "0.2"
rand = "0.9"
openssl = "0.10"

[dev-dependencies]
tempfile = "3.19"
